docs/v2.0.1/_sources/rt/index.rst.txt
Ray Tracing (RT)
================

This package provides a differentiable ray tracer for radio propagation
modeling.

The :doc:`Primer on Electromagnetics <em_primer>` provides useful background
knowledge and various definitions that are used throughout the :doc:`API
Documentation <api/rt>`.

The best way to get started is by going through some of the :doc:`Tutorials <tutorials>`.

Advanced users may want to have a look at the :doc:`Developer Guides <developer/developer>` to get a deeper
understanding of the inner workings of Sionna RT and how it can be modified or
extended according to one's needs.

Sionna RT is available as a standalone package whose source code is located in a
separate `GitHub repository <https://github.com/NVlabs/sionna-rt>`_.
Additionally, the `Sionna RT GUI <rt_gui.rst>`_ package can be used to simulate and visualize scenes, paths, and radio maps.
A technical report describing the algorithms implemented in Sionna RT is available
`here <https://nvlabs.github.io/sionna/rt/tech-report/index.html>`_.

.. toctree::
   :hidden:
   :maxdepth: 4

   tutorials
   em_primer
   api/rt.rst
   developer/developer.rst
   Technical Report <https://nvlabs.github.io/sionna/rt/tech-report/index.html>
   rt_gui.rst
   references
   Get the Code <https://github.com/NVlabs/sionna-rt>
